--- a/static/smui.css
+++ b/static/smui.css
@@ -1733,6 +1733,39 @@ svg.mdc-button__icon {
 	pointer-events: none;
 	z-index: 1;
 }
+.mdc-icon-button.smui-icon-button--size-mini {
+	width: 48px;
+	height: 48px;
+	padding: 12px;
+	font-size: 24px;
+	width: 40px;
+	height: 40px;
+	padding: 8px;
+}
+.mdc-icon-button.smui-icon-button--size-mini svg,
+.mdc-icon-button.smui-icon-button--size-mini img {
+	width: 24px;
+	height: 24px;
+}
+.mdc-icon-button.smui-icon-button--size-mini.mdc-icon-button--reduced-size {
+	width: 40px;
+	height: 40px;
+	padding: 8px;
+}
+.mdc-icon-button.smui-icon-button--size-mini.mdc-icon-button--reduced-size.mdc-icon-button--touch {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-right: 0px;
+	margin-left: 0px;
+}
+.mdc-icon-button.smui-icon-button--size-mini .mdc-icon-button__touch {
+	position: absolute;
+	top: 50%;
+	height: 40px;
+	left: 50%;
+	width: 40px;
+	transform: translate(-50%, -50%);
+}
 .mdc-icon-button.smui-icon-button--size-button {
 	width: 36px;
 	height: 36px;
